--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,12 @@ html, body {
   padding: 0;
 }
 
+.center {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .loading-bar .p-progressbar {
   height: 3px;
   border-radius: 0;
