More check in. Delete functionality. Some utility calls. Table selection. Enter key support on Add New

--- a/src/app/add-new-dialog/add-new-dialog.component.html
+++ b/src/app/add-new-dialog/add-new-dialog.component.html
@@ -2,7 +2,7 @@
           (onShow)="handleFocus($event, nameField)">
   <br/><br/>
   <span class="p-float-label">
-    <input id="name" #nameField pInputText [(ngModel)]="toAdd.name" />
+    <input id="name" #nameField pInputText [(ngModel)]="toAdd.name" (keyup.enter)="handleEnterKey(submitAddNew.bind(this))"/>
     <label htmlFor="name">Name</label>
   </span>
   <ng-template pTemplate="footer">
