--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,14 @@
 <div class="button-row">
   <p-button (onClick)="things.getAll()" icon="pi pi-refresh" [loading]="things.loading" severity="info"/>
   <p-button (onClick)="addNew.toggleAddNewDialog()" icon="pi pi-plus-circle" label="Add New"/>
+  <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()"/>
+  <p-confirmPopup></p-confirmPopup>
   <p-progressSpinner *ngIf="things.loading"/>
 </div>
 <add-new-dialog #addNew/>
 
-<p-table [value]="things.data" styleClass="p-datatable-striped" [tableStyle]="{ 'min-width': '50rem' }">
+<p-table [value]="things.data" styleClass="p-datatable-striped" [tableStyle]="{ 'min-width': '50rem' }"
+         selectionMode="multiple" [(selection)]="selectedRows">
   <ng-template pTemplate="header">
     <tr>
       <th>ID</th>
@@ -18,8 +21,8 @@
       <th>Date</th>
     </tr>
   </ng-template>
-  <ng-template pTemplate="body" let-data>
-    <tr>
+  <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
+    <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex">
       <td>{{ data.id }}</td>
       <td>{{ data.name }}</td>
       <td>{{ data.time | date: 'medium' }}</td>
