Start on template concept, with backing service and dropdown

--- a/src/app/add-new-dialog/add-new-dialog.component.html
+++ b/src/app/add-new-dialog/add-new-dialog.component.html
@@ -5,6 +5,14 @@
     <table cellpadding="10">
       <tr>
         <td>
+          Template
+        </td>
+        <td>
+          <riw-template-dropdown/>
+        </td>
+      </tr>
+      <tr>
+        <td>
           <label htmlFor="name">Name</label>
         </td>
         <td>
