Upgrade PrimeNG, because of course there was a dropdown bug I ran into in 16.7.0 and was fixed in .2

--- a/src/app/template-dropdown/template-dropdown.component.html
+++ b/src/app/template-dropdown/template-dropdown.component.html
@@ -1,4 +1,6 @@
-<p-dropdown [options]="templateService.data" optionLabel="name"
+<p-dropdown [options]="templateService.data"
+            optionLabel="name"
+            appendTo="body"
             [(ngModel)]="selectedTemplate"
             (onChange)="selectedTemplateChanged()"
             [showClear]="true" placeholder="Select a Template"
