--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
 <div class="main-wrap">
 
 <div class="button-row">
-  <p-button (onClick)="things.getAll()" icon="pi pi-refresh" [loading]="things.loading" severity="info"/>
+  <!-- TODO Edit a single selected row, try to leverage existing Add New dialog? -->
+  <p-button (onClick)="things.getAllThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info"/>
   <p-button (onClick)="addNew.toggleAddNewDialog()" icon="pi pi-plus-circle" label="Add New"/>
   <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()"/>
   <p-confirmPopup></p-confirmPopup>
@@ -12,27 +13,29 @@
 </div>
 <riw-add-new-dialog #addNew/>
 
+<!-- TODO Add sorting, filtering, etc. -->
 <p-table [value]="things.data" styleClass="p-datatable-striped" [tableStyle]="{ 'min-width': '50rem' }"
          selectionMode="multiple" [(selection)]="selectedRows">
   <ng-template pTemplate="header">
     <tr>
-      <th>ID</th>
       <th>Name</th>
       <th>Date</th>
+      <th>Type</th>
+      <th>Fields</th>
     </tr>
   </ng-template>
   <!-- TODO Style width of columns as we fill them out -->
-  <!-- TODO Add sorting, filtering, etc. -->
   <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
     <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex">
-      <td>{{ data.id }}</td>
       <td>{{ data.name }}</td>
       <td>{{ data.time | date: 'medium' }}</td>
+      <td>{{ data.templateType }}</td>
+      <td>{{ data.getFieldsAsString() }}</td>
     </tr>
   </ng-template>
   <ng-template *ngIf="!things.loading" pTemplate="emptymessage" let-columns>
     <tr>
-      <td colspan="3" class="center">
+      <td colspan="4" class="center">
         No data found yet
       </td>
     </tr>
