--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,11 @@ html, body {
   height: 45px;
 }
 
+.add-new-dialog .p-dialog {
+  min-width: 50vw;
+  height: 90vh;
+}
+
 @media (min-width: 500px) {
   .p-progress-spinner-circle {
     stroke-width: 8;
