--- a/src/app/template-dropdown/template-dropdown.component.html
+++ b/src/app/template-dropdown/template-dropdown.component.html
@@ -4,3 +4,7 @@
             [(ngModel)]="selectedTemplate"
             (onChange)="selectedTemplateChanged()"
             [style]="{'min-width': '300px'}"/>
+&nbsp;
+<p-button (onClick)="requestCreateTemplate()" icon="pi pi-plus" [rounded]="true" severity="success" title="Create a new template" />
+<p-button (onClick)="requestEditTemplate()" icon="pi pi-pencil" [rounded]="true" severity="primary" title="Edit this template"/>
+<p-button *ngIf="!!selectedTemplate" (onClick)="requestDeleteTemplate()" icon="pi pi-trash" [rounded]="true" severity="danger" title="Delete this template" />
