--- a/src/app/manage-template-dialog/manage-template-dialog.component.html
+++ b/src/app/manage-template-dialog/manage-template-dialog.component.html
@@ -2,32 +2,97 @@
   <div class="content-form">
     <div class="center">
       Template:&nbsp;
-      <p-radioButton value="create" [(ngModel)]="operation" inputId="createIn"></p-radioButton>
+      <p-radioButton value="create" [(ngModel)]="operation" (onClick)="operationRadioClicked()" inputId="createIn"></p-radioButton>
       <label for="createIn"> Create</label>
       &nbsp;
-      <p-radioButton value="edit" [(ngModel)]="operation" inputId="editIn"></p-radioButton>
+      <p-radioButton value="edit" [(ngModel)]="operation" (onClick)="operationRadioClicked()" inputId="editIn"></p-radioButton>
       <label for="editIn"> Edit</label>
       &nbsp;
-      <p-radioButton value="delete" [(ngModel)]="operation" inputId="deleteIn"></p-radioButton>
+      <p-radioButton value="delete" [(ngModel)]="operation" (onClick)="operationRadioClicked()" inputId="deleteIn"></p-radioButton>
       <label for="deleteIn"> Delete</label>
     </div>
+    <br/>
     
     <!-- TODO Name input - autocomplete, as the name has to be unique between all Templates
               Then field management to define multiple TemplateFields as desired -->
-    <ng-container *ngIf="operation === 'create'">
-      CREATE
-    </ng-container>
-    
-    <ng-container *ngIf="operation === 'edit'">
-      EDIT
+    <ng-container *ngIf="operation === 'create' || operation === 'edit'">
+      <ng-container *ngIf="operation === 'create'">
+        <p>Setup the <b>Name</b> of your template (must be unique between all templates).</p>
+        <p>Then you can add as many fields related to the template you want.<br/>
+        Each field has a <b>Property/ID</b> which must be unique in this template, and won't be shown to the user.<br/>
+        The <b>Label</b> is assigned to the input the user enters when using this template.</p>
+        <p>Each template also automatically provides a name input for the user to fill in, and an optional date.</p>
+      </ng-container>
+      <table cellspacing="5" cellpading="0" class="template-table">
+        <tr *ngIf="operation === 'edit'">
+          <td colspan="5">
+            <label>Template to Edit:&nbsp;</label>
+            <riw-template-dropdown [(selectedTemplate)]="actOn"
+                                   [hideDefaults]="true"
+                                   [hideControls]="true" />
+          </td>
+        </tr>
+        <ng-container *ngIf="actOn">
+        <tr>
+          <td colspan="5">
+            <span class="p-float-label">
+              <input #nameField pInputText [(ngModel)]="actOn.name" (keyup.enter)="handleEnterKey(submit.bind(this))"/>
+              <label>Template Name</label>
+            </span>
+          </td>
+        </tr>
+        
+        <tr *ngFor="let field of actOn?.fields">
+          <td>
+            <p-button icon="pi pi-times" severity="danger" size="small" (onClick)="removeField(field)" />
+          </td>
+          <td>
+            <span class="p-float-label">
+              <input pInputText [(ngModel)]="field.property"/>
+              <label>Property/ID</label>
+            </span>
+          </td>
+          <td>
+            <span class="p-float-label">
+              <input pInputText [(ngModel)]="field.label"/>
+              <label>Label</label>
+            </span>
+          </td>
+          <td>
+            <label>Type&nbsp;</label>
+            <p-dropdown [options]="typeOptions"
+                        appendTo="body"
+                        [(ngModel)]="field.type"/>
+          </td>
+          <td>
+            <p-checkbox [(ngModel)]="field.required" [binary]="true" label="Is Required?" class="checkbox-label-on-left"/>
+          </td>
+        </tr>
+        </ng-container>
+      </table>
+      <ng-container *ngIf="operation === 'create'">
+        <p-button (onClick)="addField()" icon="pi pi-plus" [rounded]="true" severity="success" title="Add a new field" />
+      </ng-container>
     </ng-container>
     
     <ng-container *ngIf="operation === 'delete'">
-      DELETE
+      <label>Template to Delete:&nbsp;</label>
+      <riw-template-dropdown [(selectedTemplate)]="actOn"
+                             (selectedTemplateChange)="deleteTargetChanged()"
+                             [hideDefaults]="true"
+                             [hideControls]="true" />
+      <br/>
+      <p>By default deleting a template <b>will NOT</b> clear or remove any related Things that used the template.</p>
+      <ng-container *ngIf="actOn">
+        <p>Note that you <i>can</i> choose to delete all related Things.<br/>Check a count of the selected template to see how far reaching this would be:</p>
+        <p-button (onClick)="checkForThings()" [label]="'Count Things using \'' + actOn.name + '\''" icon="pi pi-search" iconPos="left" severity="secondary"/>
+        <p-checkbox *ngIf="lastCheckCount" [(ngModel)]="deleteThings" [binary]="true" [label]="'Delete ' + lastCheckCount + ' Things as well'" class="checkbox-label-on-left"/>
+      </ng-container>
     </ng-container>
   </div>
   <ng-template pTemplate="footer">
     <p-button (onClick)="hide()" label="Cancel" icon="pi pi-times" iconPos="left" severity="secondary"/>
-    <p-button (onClick)="hide()" label="Save Template" icon="pi pi-check" iconPos="left"/>
+    <p-button (onClick)="submit($event)" [label]="getSubmitLabel()" icon="pi pi-check" iconPos="left"/>
+    <p-confirmPopup />
   </ng-template>
 </p-dialog>
