--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,9 +29,9 @@
   <!-- TODO Style width of columns as we fill them out -->
   <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
     <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex">
-      <td>{{ data.name }}</td>
-      <td>{{ data.time | date: 'medium' }}</td>
-      <td>{{ data.templateType }}</td>
+      <td><span [style]="'color:' + data.color">{{ data.name }}</span></td>
+      <td><span [style]="'color:' + data.color">{{ data.time | date: 'medium' }}</span></td>
+      <td><span [style]="'color:' + data.color">{{ data.templateType }}</span></td>
       <td>{{ data.getFieldsAsString() }}</td>
     </tr>
   </ng-template>
