Slightly better file writing

--- a/src/app/template-dropdown/template-dropdown.component.html
+++ b/src/app/template-dropdown/template-dropdown.component.html
@@ -1,3 +1,4 @@
+<!-- TODO Convert plain dropdown to an autocomplete with a dropdown https://primeng.org/autocomplete#dropdown -->
 <p-dropdown [options]="templateService.filteredData(hideDefaults)"
             optionLabel="name"
             appendTo="body"
