--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,7 @@
   <!-- TODO Edit a single selected row, try to leverage existing New Thing dialog? -->
   <p-button (onClick)="things.getAllThings()" icon="pi pi-refresh" [loading]="things.loading" severity="info" />
   <p-button (onClick)="addNew.show()" icon="pi pi-plus-circle" label="New Thing" />
-  <!-- TODO Put a count of templates in this button, like "Manage X Templates", also fits well with our global retrieval instead of ngOnInit in our template dropdown -->
-  <p-button (onClick)="manageTemplate.show()" icon="pi pi-list" label="Manage Templates" />
+  <p-button (onClick)="manageTemplate.show()" icon="pi pi-list" [label]="'Manage ' + templateService.getTemplateCount() + ' Templates'" />
   <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()" />
   <p-confirmPopup />
   <p-progressSpinner *ngIf="things.loading" />
