--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,23 @@ body {
   font-size: 22px;
 }
 
+.p-datatable .p-datatable-wrapper {
+  overflow-x: visible;
+  overflow-y: visible;
+}
+
+.p-datatable .p-datatable-thead > tr > th:not(.p-sortable-column) {
+  padding: 10px;
+}
+
+.p-datatable .p-datatable-thead > tr > th.p-sortable-column {
+  padding: 15px;
+}
+
+p-columnfilterformelement .p-inputtext {
+  height: 30px;
+}
+
 .add-new-dialog .p-dialog,
 .manage-template-dialog .p-dialog {
   min-width: 50vw;
